--- a/willpe.ServiceRegistry.nuspec
+++ b/willpe.ServiceRegistry.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>willpe.ServiceRegistry</id>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
         <title>Service Registry</title>
         <authors>Will Perry</authors>
         <owners>willpe@microsoft.com</owners>
@@ -10,10 +10,14 @@
         <projectUrl>http://github.com/willpe/serviceregistry</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>A simple dependency injection helper for .Net</description>
-        <summary>A simple dependency injection helper for .Net</summary>
+        <summary>A simple dependency injection helper for .Net
+
+For tutorials, documentation and examples, see https://github.com/willpe/serviceregistry</summary>
         <copyright>Copyrigt 2013 Will Perry, Microsoft</copyright>
     </metadata>
     <files>
         <file src="bin\Release\ServiceRegistry.dll" target="lib\ServiceRegistry.dll" />
+        <file src="bin\Release\ServiceRegistry.dll.config" target="lib\ServiceRegistry.dll.config" />
+        <file src="bin\Release\ServiceRegistry.pdb" target="lib\ServiceRegistry.pdb" />
     </files>
 </package>
