--- a/ServiceRegistry.nuspec
+++ b/ServiceRegistry.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>willpe.ServiceRegistry</id>
-        <version>1.0.1</version>
+      <version>$version$</version>
         <title>Service Registry</title>
         <authors>Will Perry</authors>
         <owners>willpe@microsoft.com</owners>
@@ -13,11 +13,6 @@
         <summary>A simple dependency injection helper for .Net
 
 For tutorials, documentation and examples, see https://github.com/willpe/serviceregistry</summary>
-        <copyright>Copyrigt 2013 Will Perry, Microsoft</copyright>
+        <copyright>Copyright 2014 Will Perry, Microsoft</copyright>
     </metadata>
-    <files>
-        <file src="bin\Release\ServiceRegistry.dll" target="lib\ServiceRegistry.dll" />
-        <file src="bin\Release\ServiceRegistry.dll.config" target="lib\ServiceRegistry.dll.config" />
-        <file src="bin\Release\ServiceRegistry.pdb" target="lib\ServiceRegistry.pdb" />
-    </files>
 </package>
